[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/GUI.gd" type="Script" id=1]
[ext_resource path="res://res/theme.tres" type="Theme" id=2]
[ext_resource path="res://gfx/heart-icon.png" type="Texture" id=3]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1014.0
margin_bottom = 590.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1014.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
margin_right = 1014.0
margin_bottom = 590.0
columns = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 4.0
margin_right = 96.0
margin_bottom = 28.0
text = "Health"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GridContainer"]
margin_left = 100.0
margin_right = 225.0
margin_bottom = 32.0
custom_constants/separation = -1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GridContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/GridContainer/HBoxContainer"]
margin_left = 31.0
margin_right = 63.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/GridContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 94.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/GridContainer/HBoxContainer"]
margin_left = 93.0
margin_right = 125.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="FoodLabel" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 36.0
margin_right = 96.0
margin_bottom = 60.0
text = "Food"
align = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/GridContainer"]
margin_left = 100.0
margin_top = 36.0
margin_right = 225.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 24 )
value = 50.0
percent_visible = false
